--- a/罗辑思维/530你是在用理性决策吗.md
+++ b/罗辑思维/530你是在用理性决策吗.md
@@ -1,7 +1,11 @@
 ### 理性
 和你一起终身学习，这里是罗辑思维。
 
-最近又在万维钢老师的专栏《精英日课》里面听到一节课，叫《决策理性批判》。请注意，这里面说的可不是行为经济学那一套哈，他不是说我们的决策中有理性的部分，也有不理性的部分，所以你要谨慎辨别。
+最近又在万维钢老师的专栏《精英日课》里面听到一节课，
+叫《决策理性批判》。
+请注意，这里面说的可不是行为经济学那一套哈，
+他不是说我们的决策中有理性的部分，也有不理性的部分，
+所以你要谨慎辨别。
 
 万维钢老师这节课的意思，
 压根就是在质疑“理性选择”的可能性。
@@ -9,22 +13,28 @@
 就算选择不全是理性，
 但是至少我们在出发点上应该尽可能理性啊。
 
-我们先来看一个例子，你就知道万老师在说什么了。
+我们先来看一个例子，
+你就知道万老师在说什么了。
 
-比如说，一个刚结婚的女性，面对一个选择，要不要孩子，请问这种事情怎么决策？
-用理性来决策吗？那好，就要权衡利弊。
+比如说，一个刚结婚的女性，
+面对一个选择，要不要孩子，
+请问这种事情怎么决策？
+用理性来决策吗？
+那好，就要权衡利弊。
 先算生孩子的收益，
 无非是家庭完整、父母满意、老了之后有人照顾等等。
 那再来算生孩子的成本，
 金钱、时间各项付出。
 这些因素都是比较好计算的。
+
 可是你发现没有，
 其中有一项东西，
 我们没法把它纳入计算，
 就是生了孩子之后给你带来的快乐和幸福。
 
 几年前网上流传一篇文章，是一个年轻的妈妈写的。
-她的一个女同事每天看她怎么带小孩，就说，看到你这样我决定不要孩子了。
+她的一个女同事每天看她怎么带小孩，
+就说，看到你这样我决定不要孩子了。
 作者就问女同事，你都看到什么了？
 女同事说我看你每天接送孩子太辛苦。
 但是作者说，那是你没看到我幸福的时候。
@@ -52,18 +62,22 @@
 所以，选择之前的你没有办法替选择之后的你做理性的选择。
 
 这个听起来有点像绕口令哈。举个例子吧：
-比如，你去买水果，看到有橘子和苹果，你现在觉得橘子比苹果好吃，就买了橘子。
+比如，你去买水果，看到有橘子和苹果，
+你现在觉得橘子比苹果好吃，就买了橘子。
 结果你把橘子拿回家之后，没准突然又会觉得苹果更好吃。
 因为你已经有了橘子了嘛，你现在没有苹果嘛。
+
 你看，选择之后的你，已经不是选择之前的你了。
 哪个才是真正的你呢？
+
 这个道理，最经典的表述，
 就是张爱玲在《红玫瑰与白玫瑰》里说的那句话：
 
 娶了红玫瑰，久而久之，
 红的变了墙上的一抹蚊子血，白的还是床前明月光；
 娶了白玫瑰，
-白的便是衣服上沾的一粒饭黏子，红的却是心口上一颗朱砂痣。
+白的便是衣服上沾的一粒饭黏子，
+红的却是心口上一颗朱砂痣。
 
 所以你看，
 原来，我们以为是在做理性选择，
@@ -180,5 +194,4 @@
 跟随万维钢老师学习它的精彩内容了。
 祝你学习愉快。
 
-[决策理性批判]()
-[罗辑思维530]()
+
