--- a/知识就是力量/8/不纠结/3_指南针.md
+++ b/知识就是力量/8/不纠结/3_指南针.md
@@ -1,7 +1,5 @@
-第三部分◆◇ 
-指南针
-
-第二个方法呢？第二个方法我们称之为叫“指南针”。
+### 指南针
+第二个方法我们称之为叫“指南针”。
 我不知道你们从小在学教科书的时候有没有这样一个困惑——说中国有四大发明，
 有一个是指南针。可是指南针不就指个南吗？
 它又没告诉我们具体怎么走，
