--- a/知识就是力量/8/不纠结/2_终点站.md
+++ b/知识就是力量/8/不纠结/2_终点站.md
@@ -1,11 +1,11 @@
 ### 终点站
-
 我们先来看第一种方法，叫终点站。
 对，很多人在告诉我们，
 你们做选择的时候应该有长远的眼光，
 但你不觉得这是废话吗？
 曾鸣教授提出来的一个词，这个词特别重要，
 叫“终局思维”。
+
 就是你不要漫无目的地想什么长远，
 你就想你要到达的那个终点站是什么，
 把它想清楚，然后倒推回来，
@@ -14,24 +14,35 @@
 两份工作在我面前，这个好处，那个好处，
 你就列吧。有的钱多、有的离家近、有的活少、
 有的公司有名……
-你怎么选？你选了
+你怎么选？
+你选了一个等于放弃了另外一个，
+你都不甘心的。
+怎么选？
+非常简单，终局思维。
 
-一个等于放弃了另外一个，你都不甘心的。
-怎么选？非常简单，终局思维。
-你现在就去想这一份工作我愿意干到退休吗？
-如果愿意，那就选它。
+你现在就去想这一份工作
+**我愿意干到退休吗？**
+如果愿意，
+那就选它。
+
 其实这个场景在很多人换工作的时候，更有用。
 很多人纠结，这个公司我要不要再待下去呢？
-待下去我又不是很满意，但是这个工作氛围，
+待下去我又不是很满意，
+但是这个工作氛围，
 还有我认识的一个人，我又有点舍不得。
-别这么想，看近处你永远都不知道怎么选的，
+别这么想，
+看近处你永远都不知道怎么选的，
 看远处、看终局——你要不要在这家公司干到退休？
 如果你判断自己不可能在这家公司干到退休，
-为什么不现在就走人呢？迟走不如早走好吗？
-你的青春年华、你的生命就那么一点时间，所以你看，
-终局思维能帮我们做很多判断。
-比如说我们在工作当中，一件事要不要干？
-选择一个具体的项目，这是几乎大家在工作中经常遇到的事情。
+为什么不现在就走人呢？
+迟走不如早走好吗？
+你的青春年华、你的生命就那么一点时间，
+
+所以你看，终局思维能帮我们做很多判断。
+比如说我们在工作当中，
+一件事要不要干？
+选择一个具体的项目，
+这是几乎大家在工作中经常遇到的事情。
 很多大公司也发明了一个类似的方法，什么方法呢？
 就是我决定要干一件事，咱们不慌着组团队，
 写项目计划书，这些都先不忙，
@@ -44,14 +55,17 @@
 请问这新闻稿怎么写？
 请注意，什么都没有，没开始干，我们先想假设它干成了，
 这个新闻稿怎么写？等你写出来的时候，
-当然那个时候这件事成了嘛，你会骄傲地向全世界宣布我为这个社会做了什么工作，
-我做了什么创新，新闻稿里都有。拿着这些亮点倒推回来，
+当然那个时候这件事成了嘛，
+你会骄傲地向全世界宣布我为这个社会做了什么工作，
+我做了什么创新，新闻稿里都有。
+拿着这些亮点倒推回来，
 你就知道什么事能干、什么事不能干了。
 如果你觉得这事我好像没能力干，
 好了，这事不用干。
 如果新闻稿写出来没有什么亮点，
 对社会也没有什么贡献，
 那这个项目也不用干了。
+
 就像我们这个节目，《知识就是力量》，
 我刚开始是想过这个问题的，
 如果我是想收视率超过那些唱歌跳舞的节目，
@@ -59,24 +73,32 @@
 我心里就知道这结果不大可能出现，
 这事就不用干了。
 但是我写了另外一份新闻稿，
-上面可能就是一句话，江苏卫视播出的《知识就是力量》节目，
-在广大的电视市场当中遴选出
-量》节目，在广大的电视市场当中遴选出了一批观众，
+上面可能就是一句话，
+江苏卫视播出的《知识就是力量》节目，
+在广大的电视市场当中遴选出了一批观众，
 他们是一批什么样的人呢？
 他们是一批对未来有好奇、
 对知识的力量有信任、
 对自己有期许的这样一批人，
-被一个电视节目选出来了。这就是重大的社会价值，
-这就是这个节目如果做成了，我最终的新闻稿，
+被一个电视节目选出来了。
+这就是重大的社会价值，
+这就是这个节目如果做成了，
+我最终的新闻稿，
 所以后来我们所有的努力都是按照这一条路线走的，
+
 你看，终局思维多有用。
-这个世界其实有一个特别底层的秘密，有句话说得好，
-幸福的家庭都是类似的。为什么幸福的家庭都是类似的？
-成功的任务方法都差不多。为什么都差不多，
-你想过这个问题没有？很简单，
-人的终局是差不多的，都是要到那个地方去的。
-最近我看到了一篇文章，很有意思，是一个护士写的。
-她叫布洛妮，但她不是普通的护士，她是一个临终关怀的护士，
+这个世界其实有一个特别底层的秘密，
+有句话说得好，幸福的家庭都是类似的。
+为什么幸福的家庭都是类似的？
+成功的任务方法都差不多。
+为什么都差不多，你想过这个问题没有？
+很简单，
+人的终局是差不多的，
+都是要到那个地方去的。
+最近我看到了一篇文章，
+很有意思，是一个护士写的。
+她叫布洛妮，但她不是普通的护士，
+她是一个临终关怀的护士，
 她整天照顾的都是那些即将要去天堂的老人。
 她利用自己的工作之便就采访这些人，
 你们此生有什么样的遗憾呢？
@@ -84,7 +106,8 @@
 乎一模一样。每一个站在生命终点的人，
 讲出的人生几乎一模一样。
 她把他们的答案写成了一篇文章，
-一篇文章启发了好多人。硅谷的很多著名的投资人，
+一篇文章启发了好多人。
+硅谷的很多著名的投资人，
 每隔几周都要翻出这篇文章来看一下，
 然后对照一下自己的现在，
 用那些站在终点站的人的思考，
