--- a/知识就是力量/12/最重要的三点/2_回归不变.md
+++ b/知识就是力量/12/最重要的三点/2_回归不变.md
@@ -188,8 +188,7 @@
 所以很多人说，我也想做点事，
 我也想创业，
 但是好像正经事都被别人做掉了，
-我
-能做点什么跟别人不一样的事吗？
+我能做点什么跟别人不一样的事吗？
 这个想法本身就错了，
 去做那个几千年来所有时代都有人做的事那才是正道，
 你看今天的那些大公司跑出这个轨迹了吗？
