--- a/知识就是力量/12/最重要的三点/3_简单&重复.md
+++ b/知识就是力量/12/最重要的三点/3_简单&重复.md
@@ -1,6 +1,20 @@
-最基本的运算不是2进制，
-而是跟人一样掰着十个手指头，
-是10进制的，
+复杂的事简单做，简单的事重复做
+
+知道了要去做什么，但是该怎么做呢？
+这就是下面我要讲的第二个建议了，
+答案是：做简单的事。
+我们得到App里有一个老师叫陈凯，
+他有一句话讲得特别好，
+叫“复杂的事简单做，简单的事重复做。”
+这个世界这么复杂，人的脑子又这么复杂，
+怎么能做简单的事呢？
+其实简单是应对复杂最好的工具。
+计算机的网络很复杂吧？
+可是计算机的底层是2进制，
+就是0和1这两个数字通过不断重复运算，
+才形成了我们今天看到这些神奇的电脑和人工智能的世界，
+你想如果一开始电脑做的那个最基本的运算
+不是2进制，而是跟人一样掰着十个手指头，是10进制的，
 电脑的功能可能不会像今天那么强大。
 我们很多人其实误解了现代世界的复杂性到底是什么。
 比如说造大飞机，
@@ -141,4 +155,18 @@
 你现在可以学我每天早上发60秒语音，
 我比你先跑了5年半，
 这5年半的差距只要我不松劲你是永远追不上，对吧？
-这就是时间
+这就是时间公平性。
+我们每个人都想找这个世界要公平，
+最公平的东西就是时间的力量，
+所以我的跨年演讲坚持20年，
+后来我一想干脆名字就叫“时间的朋友”。
+我不见得是演讲能力最强的人，
+但是只要我跟时间是最好的朋友，
+它的价值增长，我就能看得到。
+就像我们办公室墙上的一句话，
+曾国藩说的，叫“结硬寨，打呆仗”，
+做那些最硬的事，
+干那些在别人看起来很呆的事，
+一直把它干下去，
+那么在打之前，
+我们就赢定了。
