--- a/知识就是力量/1/嫁出去/1_犹豫.md
+++ b/知识就是力量/1/嫁出去/1_犹豫.md
@@ -103,40 +103,56 @@
 但是今天不行，
 今天你已经不知道找对方要什么了。
 你会发现当你们相遇的那一刻任何标准都很难让你做出这个决定。
+
 第二个难题在于，
-我们就算在一起了，我们会分开吗？ 
-过去分开的理由比如说性格不合呀，
-经常吵架呀，或者移情别恋啊，
-无非就是这些。但是就我的观察，
+我们就算在一起了，
+我们会分开吗？ 
+过去分开的理由
+比如说性格不合呀，
+经常吵架呀，
+或者移情别恋啊，
+无非就是这些。
+但是就我的观察，
 在我身边的朋友当中，
 所有过不下去的两口子还真不见得是因为这个原因。
 什么原因？
 通常只有一个，
+
 就是这两个人的成长不同步。
 一个人进步的快，
 一个人进步的慢，
-渐渐的越走越远，
+渐渐的越走越远。
+
 这是我身边朋友最终婚姻解体的最最重要的原因。
-那问题又来了，为什么我还要劝你结婚？
-正在看电视的叔叔阿姨，如果你想劝你的女儿，
+那问题又来了，
+为什么我还要劝你结婚？
+正在看电视的叔叔阿姨，
+如果你想劝你的女儿，
 你的晚辈结婚，下面这段话会非常重要。
 下面我讲的话不是我的体会，
 是来自于知识的礼物。
 人生一切难题，知识给你答案。
+
 一个现代人如果你选择结婚的话，
-其实还有一个更好的理由，这叫协同进化。
+其实还有一个更好的理由，
+这叫协同进化。
 什么意思呢？
 就是找到一个合作伙伴，
 我们一起进化，
 每一个人都成为更好的自己。
+
 最近有一个社会心理学家就讲了这样的话，
 他说传统婚姻是一个人进入成年之后的第一件事。
 而现在的婚姻呢？
-是一个人进入成年之后把自己的一切事物捋顺之后的最后一件事。
-把传统婚姻和现代婚姻最本质的区别给说出来了。
+是一个人进入成年之后
+把自己的一切事物捋顺之后的
+最后一件事。
+把传统婚姻和现代婚姻
+最本质的区别给说出来了。
 所以结婚变得很迟，
 所以结婚我们变得非常犹豫。
 我自己30岁那一年就发生了这么一件事。
-当时我在我身边的朋友面前满嘴都在说这样的话，
+当时我在我身边的朋友面前
+满嘴都在说这样的话，
 我不结婚，我结什么婚，
 我得奋斗，得打拼。
