--- a/知识就是力量/1/嫁出去/2_现代婚姻.md
+++ b/知识就是力量/1/嫁出去/2_现代婚姻.md
@@ -38,22 +38,29 @@
 那结果是什么呢？
 结果是小麦这个物种现在在全球的播种面积是225万平方公里，
 超过中国国土面积的五分之一，
-它已经是地球历史上最为成功的植物物种。其实何止是小麦？
+它已经是地球历史上最为成功的植物物种。
+其实何止是小麦？
 所有成功的物种都起用了这样的策略。
-比如说狗，它是在很久很久之前就加入了和人在一起的协作链条，
+比如说狗，
+它是在很久很久之前就加入了和人在一起的协作链条，
 狗是啥？
-它的远祖其实是一种比较弱的狼，如果按照自然进化来说，
+它的远祖其实是一种比较弱的狼，
+如果按照自然进化来说，
 它很可能是要被淘汰掉的。
 但是它找到了人类作为共同进化的伙伴。
 比如说它并不接近人类的营地，
 而是在外面站岗放哨，一旦发现危险迫近，
-它就主动的发出叫声。比如说它和人类一起出猎，
+它就主动的发出叫声。
+比如说它和人类一起出猎，
 打到了猎物，它叼回来给人类，
 人类赏多少它才吃多少，结果是什么呢？
-在所有的哺乳动物当中，狗是最成功的物种。
+在所有的哺乳动物当中，
+狗是最成功的物种。
 所以啊，这个时代的结婚已经不是你有什么条件，
-我有什么条件，我们一起拿来凑个班子或者是做个交换的。
-现在的婚姻是协同进化，是协同进化发出的一个邀约，
+我有什么条件，
+我们一起拿来凑个班子或者是做个交换的。
+现在的婚姻是协同进化，
+是协同进化发出的一个邀约，
 你要不要和我一起变成更好的自己呢？
 好，
 带着这个视角我们再回头看
@@ -65,10 +72,15 @@
 说你们家小区的地下停车库每个月的停车费是多少钱？
 但是她的初衷仍然和一千年前没有什么区别，
 都是你有什么，我有什么，我们将来能不能互相补足。
-但是请注意，这种心智模式它很可能就埋下了今后婚姻和恋爱解体的种子。
-什么叫心智模式？就是你习惯了这么想，是我有什么，
+但是请注意，
+这种心智模式它很可能就埋下了
+今后婚姻和恋爱解体的种子。
+什么叫心智模式？
+就是你习惯了这么想，
+是我有什么，
 我长的这么好看，我每个月挣钱这么多，我对你这么好，
-你为什么不XXX。我希望你如何，
+你为什么不XXX。
+我希望你如何，
 你没有按照我希望的那样做，
 所以我要把你掰回到XXX。
 
