--- a/知识就是力量/11/处理矛盾/4_实干者.md
+++ b/知识就是力量/11/处理矛盾/4_实干者.md
@@ -65,12 +65,40 @@
 你会发现大量的矛盾根本就不存在。
 刚才我们举的例子还是公司啊职场啊，
 你可能会问，
-那这种所谓的实干者思维能够解决我们的日常矛那这种所谓的实干者思维能够解决我们的日常矛盾和家庭冲突吗？当然可以。
-只要是把观念世界的事变成行动世界的事，马上就会出现成本问题。成本谁承担，谁就负责决策，
+那这种所谓的实干者思维能够解决
+我们的日常矛盾和家庭冲突吗？
+当然可以。
+只要是把观念世界的事变成行动世界的事，
+马上就会出现成本问题。
+成本谁承担，谁就负责决策，
 只要你们家秉持这个原则，就没有矛盾。
-我举个例子，家庭里两代人很容易为一个问题发生冲突，就是送孩子上什么样的幼儿园，假设两个幼儿园，一个稍微远一点，好像好一点，一个近一点，好像质量差一点，送哪个？两代人观点可能不一致。非常简单，谁负责接送孩子上下学，谁来做决定。为什么？
-因为远近问题到最后是变成接送孩子的行动成本的问题嘛，谁负责接送谁就负责决策，这不是一个讲道理的事，这就是一个谁支付成本的问题，你看多简单，问题迎刃而解。
+我举个例子，家庭里两代人很容易为一个问题发生冲突，
+就是送孩子上什么样的幼儿园，
+假设两个幼儿园，一个稍微远一点，
+好像好一点，一个近一点，好像质量差一点，送哪个？
+两代人观点可能不一致。
+非常简单，谁负责接送孩子上下学，
+谁来做决定。为什么？
+因为远近问题到最后是变成接送孩子的行动成本的问题嘛，
+谁负责接送谁就负责决策，
+这不是一个讲道理的事，
+这就是一个谁支付成本的问题，
+你看多简单，问题迎刃而解。
 
 这就是我们给大家的第三招，叫实干者思维。
-我们中国人都知道那个故事，就是分饭，怎么吃大锅饭？谁来分？怎么叫公平？这在观念世界里肯定难以解决，但是中国人就有解决问题的智慧，就是让一个人来实干哪，只要加一条规则就行了，谁分饭的谁就最后拿饭，什么意思？就是分成一碗一碗的，只要你胆敢任何一碗少那么一丢丢，因为别人先拿，你最后拿，所以少的这碗饭一定是你的，不公平的后果你自己承担。
-所以你看，观念世界的冲突，无论多激烈都可能是假的，只要把它变成行动，有具体的人承担它的成本，很多矛盾就会烟消云散。
+我们中国人都知道那个故事，
+就是分饭，怎么吃大锅饭？
+谁来分？怎么叫公平？
+这在观念世界里肯定难以解决，
+但是中国人就有解决问题的智慧，
+就是让一个人来实干哪，只要加一条规则就行了，
+谁分饭的谁就最后拿饭，什么意思？
+就是分成一碗一碗的，只要你胆敢任何一碗少那么一丢丢，
+因为别人先拿，你最后拿，
+所以少的这碗饭一定是你的，
+不公平的后果你自己承担。
+所以你看，观念世界的冲突，
+无论多激烈都可能是假的，
+只要把它变成行动，
+有具体的人承担它的成本，
+很多矛盾就会烟消云散。
