--- a/知识就是力量/11/处理矛盾/2_生意市场价.md
+++ b/知识就是力量/11/处理矛盾/2_生意市场价.md
@@ -1,44 +1,19 @@
-生意人思维
+### 生意人思维
+我们第一个要向他学习的，
+就是那些生意人。
 
-我们看了大量的资料，发现产生矛盾有一个重要的原因，就是每个人都倾向于高估自己，这是每个人心里都有的心理机制。
-你要是不信，你去随便找一个学生的班级，
-然后问大家，觉得自己的综合水准是在平均线以上还是以下？你放心，调查出来那个结果，
-一定是绝大多数人都认为自己在平均线以上。
-你自己也可以在心里想一下，
-我这个长相是在平均线以上还是以下？
-你放心，绝大多数人都会说在平均线以上。
-有一个公司做过一个调查，
-一个工作做完之后让每个人写，
-自己在这个工作里面的贡献度是百分之多少？
-最后一汇总，发现300%。
-这是人类的一种共同的行为，
-我们都倾向于高估自己。
-
-虽然我们争的不再是资源，但是我们要争份额，
-而每一个人在看到一个份额的时候都觉得自己该多拿一点，
-这不都有矛盾了。
-柳传志老爷子讲过一个比方，叫“大鸡小鸡”，
-什么意思呢？就是两只鸡见面的时候，
-如果体型差异没有那么大的时候，
-每一只鸡都觉得自己比对方大，
-比如一只普通的母鸡见了很大的火鸡，你比我大？
-那一直到什么时候才会真正同意对方比我大呢？
-直到这个大小极其悬殊的时候才行，
-比如说一只鸡见了一只鸵鸟，就会承认它比我大。
-这个现象在职场里面非常普遍，能力差不多的人，
-互相都觉得我比他大，大量的矛盾都是这么诞生的。
-所以，回到我们今天的话题，
-怎样成为一个化解矛盾的高手呢？
-我们第一个要向他学习的，就是那些生意人。
-
+#### 市场公允价格
 说到这儿，我们就可以亮出如何成为一个化解矛盾的高手的第一招了，
 那就是生意人思维。
 请注意啊，我不是让你成为一个生意人，
 什么都拿生意人那一套去对待。
 但是生意人思维最可贵的地方，
 就是让我们在评估他人价值的时候，
-有一个公允的信号，这个信号帮助极大。
-我举个例子，比如说你想在一个地方租一套房，
+有一个公允的信号，
+这个信号帮助极大。
+
+我举个例子，
+比如说你想在一个地方租一套房，
 自己住。但是你不愿意找中介啊，
 因为你不想让中间商赚差价啊。
 好，正好一个你的朋友，跟你关系非常好啊，
@@ -62,7 +37,8 @@
 到最后也许因为这个房子，你们连朋友都没得做。
 所以即使你们是朋友，不让中间商赚差价，
 但是最理智的做法仍然是回到市场公允价格去付他的房租。
-道理就这么简单，生意人思维不是让我们成为生意人，
+道理就这么简单，
+生意人思维不是让我们成为生意人，
 但它是我们做选择的一个重要的辅助线。
 
 我有一位朋友是创业者，他公司不大，
@@ -98,15 +74,18 @@
 其实这是在用市场公允定价的方式，
 让双方的价值都得到一个公正的体现。
 你看，这就是生意人思维在处理矛盾当中的应用。
+
 所以我们生活在现代社会，
 一个复杂的协作网络，
 每一个人都倾向于高估自己的时候，
 我们必须借助生意人的思维，
 来找到这个公允的价值。
-这不是在让你让，这不是在让你逃，
+这不是在让你让，
+这不是在让你逃，
 不是让你做好好先生，
 而是洞察到我们每个人都在高估自己的事实，
 然后正确地评估他人的价值。
+
 这是我们给大家提供的第一个思想工具，
 我们称之为叫生意人思维。
 这不是让大家都去用生意人的心态去做事，
