--- a/知识就是力量/11/处理矛盾/3_银行家格局.md
+++ b/知识就是力量/11/处理矛盾/3_银行家格局.md
@@ -1,6 +1,9 @@
-银行家思维
+### 银行家思维
 
-那第二个，我们可以向他借鉴思维方式的人群是谁呢？我们称之为叫银行家思维。大家都知道钱是个好东西，很多矛盾往往都是在争钱，可是你觉得奇怪吗？
+那第二个，我们可以向他借鉴思维方式的人群是谁呢？
+我们称之为叫银行家思维。
+大家都知道钱是个好东西，很多矛盾往往都是在争钱，
+可是你觉得奇怪吗？
 有一种人他偏偏是来给你钱的，这个人就是银行家。
 为什么他能把一个人人都在争的东西给你呢？
 这个问题听着奇怪，其实稍微一想答案非常简单，
@@ -9,12 +12,14 @@
 所以本质上是因为格局不同，
 带来的对钱的态度不同。
 
+#### 格局
 你看，这种思维我们就可以拿来来处理我们眼下的矛盾。
 为啥？因为所有的矛盾都是因为在同一个格局里。
 这个东西你也想要，我也想要，同一块蛋糕是你吃我吃，
 同一个位置是归你还是归我，不就这点事嘛。
 只要跳出这个格局，借用我们刚才讲的银行家的思维，
 其实就是解决矛盾的一个方式。
+
 举个例子，前些年，
 有一家很有名的公司做了一次特别奇葩的校园招聘。
 校园招聘就是到学校招应届的本科毕业生，
@@ -47,6 +52,8 @@
 这个业务周期就能抓得住了。
 这就是我们要讲的第二招叫“银行家思维”，
 我要跳出这个格局去想一个更大的一盘棋，
-有没有可能在更大的格局里面我跟你交换一个更大的利益呢？
-或者在未来的时光里我跟你交换一个更大的利益呢？
+有没有可能在更大的格局里面
+我跟你交换一个更大的利益呢？
+或者在未来的时光里
+我跟你交换一个更大的利益呢？
 
