--- a/知识就是力量/11/处理矛盾/5_建筑师.md
+++ b/知识就是力量/11/处理矛盾/5_建筑师.md
@@ -1,54 +1,4 @@
 ### 建筑师思维
-在讲最后一招之前，
-我们先介绍一个测试，叫“橙汁测试”。
-有这么一个人，
-要替他们公司选择一个开大会的酒店，
-一千人开大会，选择酒店万一有个闪失，
-体验不好，全公司上下都得骂他。
-酒店的品牌都不错，怎么选？
-他就给酒店出了一个非常困难的题目，
-对酒店来说简直就是刁难。
-什么题目呢？
-就是我们这一千人住店，
-早上7点钟想喝橙汁，
-还得是鲜榨橙汁，这意味着什么？
-整个店里夜里就得起来给他们榨橙汁，
-任何酒店都没有这样的常规服务，
-所以对每个酒店都是一个难题。
-那好，在这个难题面前，
-什么样的酒店算是好酒店呢？
-通常会有这么几种反应。
-第一种酒店说，这我们干不了。
-这当然不行，这肯定不是好酒店，
-有钱都不挣，遇到困难都不敢解决，排除。
-还有一种酒店，一听这个要求就会说，
-好的，我们保证完成任务。这样的酒店能选吗？
-不好意思，也不能选。为什么？
-因为这明明是一个大难题，想都不想你就答应了，
-肯定是为了把这笔生意做成，
-这背后有多少坑多少雷，
-你心里没数的。
-你心里没数到时候，
-当然就会出错，让客户体验一塌糊涂。
-那么说不行也不行，说行也不行，什么才是好酒店呢？
-这个人说只有一种酒店是好的。
-那就是听到这个要求之后说，好，请给我一点时间，
-我评估一下为了完成这个任务，
-我们需要添加什么样的资源，
-这些资源大致什么价格，
-我给你生成一张账单，
-你看一下账单再决定需不需要这样的服务。
-好酒店！
-
-听着好像张嘴就在谈钱，
-但是这句话背后折射了什么？
-这是一个既愿意克服困难、满足客户需求的酒店，
-也是一个边界感特别清楚的酒店。
-他的边界是通过清晰地给你呈现成本和代价来实现的。
-对，这就是我们要讲的最后最有效的一招，
-化解我们这个时代的矛盾和冲突，
-就是事先告知所有人，
-我的边界在哪儿和你跨过边界的成本。
 前面我们讲了三招，我们都给它取了个名字，
 生意人思维、银行家思维和实干者思维，
 那么刚才我们讲的这个边界叫什么思维呢？
@@ -60,12 +10,14 @@
 划分成一个一个的边界。
 其实我们生活中的大量冲突和矛盾
 都是因为边界感的模糊带来的。
+
 举个例子，你最好的朋友现在找你借钱，
 两千块钱，你会找他写借条吗？
 不会，不好意思？
 你会找他要利息吗？
 不会，不好意思？
 好，那你们之间的边界就没有了，
+
 你的钱就是他的钱。
 也许你们关系很好，他还钱了，
 因为这次有借有还你们的关系还会被巩固。
@@ -74,17 +26,22 @@
 第一，钱回不来了；
 第二，这朋友没得做了；
 第三，钱回不来，朋友也没得做了。
+
 听完了这个例子其实我们应该反思一下，
-大量的矛盾，并不是因为我们跟对方在争什么名额利益，
+大量的矛盾，
+并不是因为我们跟对方在争什么名额利益，
 而是因为原来的边界不清楚，即使双方没有在争，
-仍然可能产生矛盾。多少闺蜜兄弟之间的矛盾，
+仍然可能产生矛盾。
+多少闺蜜兄弟之间的矛盾，
 都是这么产生的。我是怎么对你的？
 你再看你是怎么对我的？
 我上次对你连那样的事都做了，
 这次你连这样的事都不肯替我做！
-闺蜜之间，兄弟之间会存在大量这样的矛盾，
+闺蜜之间，
+兄弟之间会存在大量这样的矛盾，
 谁让你为对方做那样的事，
 这就是因为你们之间的边界不清楚。
+
 我很佩服我身边那些严守边界的人，
 比如说我认识一个女孩，她的闺蜜给她打电话说，
 我有一事我跟你说说，你可千万别跟别人说，
@@ -102,6 +59,7 @@
 楚河汉界，他人不得越雷池一步。
 不是，而是要把边界划出来，
 并且让每一个人知道越过它的成本。
+
 其实我们整个现代社会，
 它的运行和规则，
 都是建立在各种各样、若隐若现、或强或弱的边界上。
