--- a/知识就是力量/2/有价值/0_不只是钱.md
+++ b/知识就是力量/2/有价值/0_不只是钱.md
@@ -16,7 +16,8 @@
 #### 淡季旺季
 钱这个东西在我们变得更有价值的过程当中，
 其实是一个很不好的参照物。
-我们来举个例子。2017年诺贝尔经济学奖得主叫理查德·塞勒，
+我们来举个例子。
+2017年诺贝尔经济学奖得主叫理查德·塞勒，
 他的研究团队呢，就研究了一个群体，就是出租车司机。
 要知道很多城市出租车这个生意是有淡季和旺季之分的。
 假设你是一名出租车司机，
@@ -46,7 +47,8 @@
 因为钱这个目标，
 遮蔽了他的视野。
 
-*锚定效应*：指的就是一个锚一样的东西、观念，
+**锚定效应**
+指的就是一个锚一样的东西、观念，
 会成为你判断所有事情的标准。
 
 不要光笑话他们，我们每个人身上都存在这样的效应。
@@ -54,15 +56,23 @@
 叫“狭窄框架效应”。就是当框架非常窄的时候，
 你在框架之中，你实际上看不到世界的全貌。
 所以钱不是一个好框架。
-   
-为了进一步说明，我再说个段子。 
-有一哥们去蹦极，然后他就问多少钱蹦一次？那人说260。贵了，便宜点。
-行，你要多少钱？哟，还能还价呢。对，多少钱都有，最便宜十块钱。
-哦，那有什么区别呢？区别不大，
-就是价格越便宜，这绳啊就越细。
-这当然是个段子了，真正的蹦极经营者不会这样去做的。但是它在告诉我们，
-当你只盯住钱的时候，这个世界的很多维度、很多真相，
-你是看不到的，你很容易去做出那种愚蠢的决策。
+
+为了进一步说明，我再说个段子。
+有一哥们去蹦极，然后他就问多少钱蹦一次？
+那人说260。贵了，便宜点。
+行，你要多少钱？
+哟，还能还价呢。
+对，多少钱都有，最便宜十块钱。
+哦，那有什么区别呢？
+区别不大，就是价格越便宜，
+这绳啊就越细。
+这当然是个段子了，
+真正的蹦极经营者不会这样去做的。
+但是它在告诉我们，
+当你只盯住钱的时候，
+这个世界的很多维度、很多真相，
+你是看不到的，
+你很容易去做出那种愚蠢的决策。
 所以啊，这个难题就来了，
 本来今天这个题目就很难，
 怎样做一个更有价值的人。
