--- a/知识就是力量/12/最重要的三点/1_回归不变.md
+++ b/知识就是力量/12/最重要的三点/1_回归不变.md
@@ -1,4 +1,4 @@
-回到那些不变的东西
+### 回到那些不变的东西
 
 回想一下，我们这代人在上学的时候写作文，
 通常第一句话都是“在这个日新月异的时代”；
@@ -16,14 +16,18 @@
 相反，是要回到那些不变的东西。
 这话听起来有点奇怪吧？
 
-我们老祖宗讲过一句话，“天不变道亦不变”。
+我们老祖宗讲过一句话，
+“天不变道亦不变”。
 说的是老天爷不变的，那些道理不变化的。
-举个例子，世界首富，亚马逊的老板，贝佐斯，
+举个例子，
+世界首富，亚马逊的老板，贝佐斯，
 他就讲了这么一段话：
-很多人都在问，未来10年会发生哪些变化？
-但是我觉得这事不重要，真正重要的是未来10年，
-哪些事是不变的。
-一个企业的战略是要建立在那些不变的东西上。
+很多人都在问，
+未来10年，会发生哪些变化？
+但是我觉得这事不重要，真正重要的是
+未来10年，哪些事是不变的。
+一个企业的战略
+是要建立在那些不变的东西上。
 这听起来很奇怪，
 这个世界怎么是不变的呢？
 我们稍微把视野放宽一点，
@@ -36,19 +40,24 @@
 所以人类的一系列的生活方式，
 秋收冬藏，春耕夏耘，
 也是不变的。
+
 我说到这儿，
 你可能已经知道我想说什么了。
 这个世界是一层一层地建起来的，
-底下的东西不变，上面的东西在做微小的调整。
-打一个比方，我们住在一个万丈高楼上面，
+底下的东西不变，
+上面的东西在做微小的调整。
+打一个比方，
+我们住在一个万丈高楼上面，
 就脚下这一两层不断地在装修，
 更深的底下的楼座是不变的。
 
-陈海贤老师在《自我发展心理学》课程中，
-打了一个的比方，相当于一个人开车，把油门踩到了底，
+陈海贤老师在《自我发展心理学》课程中，打了一个的比方，
+相当于一个人开车，
+把油门踩到了底，
 但是没有挂档。
 我们身边有大量的人在勤奋地工作，很累、很不容易，
-他们心中充满了焦虑，但是没挂挡，
+他们心中充满了焦虑，
+但是没挂挡，
 你天天跟变化做博弈，当然就很难往前走。
 所以就有了这个建议：
 回到那些不变的东西。
@@ -58,8 +67,8 @@
 
 举个例子，有一次我们办公室来了一个新同事，
 我一看他的简历发现他是学历史的，这不奇怪，
-奇怪的是他毕业以后的头一份工作是在投资银行，
-天天做投资。
+奇怪的是他毕业以后的头一份工作
+是在投资银行，天天做投资。
 我就问他，
 你这学历史的，专业不对口啊，
 去了投资银行能干得好吗？
@@ -112,7 +121,9 @@
 甚至连芬兰圣诞老人村里的圣诞老人也都变成了这副打扮，
 这个过程大家想到什么原理没有？
 
-就是一定要回到那个大家已经有了的共同认知、属于人类文明底层不变的东西，
+就是一定要回到那个
+大家已经有了的共同认知、
+属于人类文明底层不变的东西，
 然后强化它、改造它，
 用最新的属于这个时代的技术观念和设计对它进行改造。
 我们的文明就是这样衍生发展的，
@@ -160,8 +171,8 @@
 因为符号一直在被创新者用那个时代的技术观念去强化，
 这就是创新者在人类文明中的真实地位。
 知名出版人华楠，
-他把这一套道理总结成八个字，
-叫“回到母体，强化母体。”
+他把这一套道理总结成八个字，叫
+“回到母体，强化母体。”
 
 人类文明是我们母亲，
 她在那儿已经很
@@ -170,38 +181,45 @@
 我们要回报她。
 我们要用这个时代各种各样最好的东西去强化她，
 这就是所谓的创新，
-从大企业的创新到我们身边每一件小工作的创新本质上都是一样的。
+从大企业的创新到我们身边每一件小工作的创新
+本质上都是一样的。
 我们很羡慕的那些大企业，比如说亚马逊，
 刚才也说他们要追逐不变的东西。
 亚马逊是做零售的，那么零售怎么创新呢？
 那个不变的人类永恒的需求是什么，
-我们在网上买东西要追求更便宜的价格、更快的速度、更高的效率，
+我们在网上买东西要追求
+更便宜的价格、更快的速度、更高的效率，
 要买到更丰富的东西，
-这件事几千年文明史上变过吗？
-没有吧。亚马逊的老板贝索斯他就做了一件很神奇的事，
+这件事几千年文明史上变过吗？没有吧。
+亚马逊的老板贝索斯他就做了一件很神奇的事，
 他1997年公司上市的时候，写了一封给股东的信，
 此后每一年都写一封给股东的信，
 然后每一年都把第一年写给股东的信挂出来，
 你看多少年前我说这个话没变过，
 确实不用变，
 这事再过多少年也不用变。
-所以很多人说，我也想做点事，
-我也想创业，
+
+所以很多人说，
+我也想做点事，我也想创业，
 但是好像正经事都被别人做掉了，
 我能做点什么跟别人不一样的事吗？
 这个想法本身就错了，
-去做那个几千年来所有时代都有人做的事那才是正道，
+去做那个几千年来所有时代都有人做的事
+那才是正道，
 你看今天的那些大公司跑出这个轨迹了吗？
-咱就说一细菌，世界上第一种生物。
+咱就说一细菌，
+世界上第一种生物。
 开始它有啥需求，就三个。
 第一，获取环境的养分，就是经济需求，
 就像今天的电商一样。
 第二，处理和其他细菌的关系，
 就像今天的社交软件一样。
-最后，细菌需要考虑那些细胞膜上布满的各种受体、感受环境的温度、压力等等，
+最后，细菌需要考虑那些细胞膜上布满的各种受体、
+感受环境的温度、压力等等，
 然后好决定自己下一步怎么办，
 这是什么创业项目？
 就是我们的得到App嘛，
 给大家要提供新的信息、新的知识。
 
-这就是第一个建议，回到不变的东西。
+这就是第一个建议，
+回到不变的东西。
