--- a/知识就是力量/12/最重要的三点/0_穿过身体.md
+++ b/知识就是力量/12/最重要的三点/0_穿过身体.md
@@ -1,12 +1,13 @@
-让知识穿过你的身体
-
+### 让知识穿过你的身体
 我们一直在说一句话，叫：
 “人生一切难题，知识给你答案”。
 这句话是真的还是假的呀？
 很多人就在问，
 听了这些知识真的有用吗？
+
 有用没用关键看一条，
 就是这些知识有没有穿过你的身体。
+
 我举个例子你就明白了。
 我看过一个音乐教育家辅导孩子欣赏音乐。
 他的辅导方式很特别，
@@ -18,8 +19,7 @@
 他问孩子一些问题，
 很奇怪的问题，
 比如你听完了这段音乐，
-你觉得它是什
-么颜色的呀？
+你觉得它是什么颜色的呀？
 孩子就会随心所欲地回答，
 我觉得它是红色的、蓝色的、彩色的……
 请注意，
@@ -33,7 +33,9 @@
 你听完了这段音乐之后，
 你觉得它是什么味道的？
 不管答案是酸甜苦辣，还是别的什么，
-知识穿过了身体。所以知识就是力量，
+知识穿过了身体。
+所以知识就是力量，
+
 这个知识如果真的对你有用，
 那你一定是做了两件事。
 第一，你尝试对听到的东西做了自己的思考；
@@ -41,6 +43,7 @@
 或者用到了你的生活中。
 让知识穿过了你的身体，
 这就是你的财富。
+
 所以今天最后一期节目，
 我就拿出自己压箱底的东西，
 把那些真正穿过我身体的知识分享给你，
