--- a/知识就是力量/12/最重要的三点/2_简单&重复.md
+++ b/知识就是力量/12/最重要的三点/2_简单&重复.md
@@ -1,11 +1,12 @@
-复杂的事简单做，简单的事重复做
-
-知道了要去做什么，但是该怎么做呢？
+### 复杂的事简单做，简单的事重复做
+知道了要去做什么，
+但是该怎么做呢？
 这就是下面我要讲的第二个建议了，
 答案是：做简单的事。
+
 我们得到App里有一个老师叫陈凯，
-他有一句话讲得特别好，
-叫“复杂的事简单做，简单的事重复做。”
+他有一句话讲得特别好，叫
+“复杂的事简单做，简单的事重复做。”
 这个世界这么复杂，人的脑子又这么复杂，
 怎么能做简单的事呢？
 其实简单是应对复杂最好的工具。
@@ -16,7 +17,9 @@
 你想如果一开始电脑做的那个最基本的运算
 不是2进制，而是跟人一样掰着十个手指头，是10进制的，
 电脑的功能可能不会像今天那么强大。
-我们很多人其实误解了现代世界的复杂性到底是什么。
+我们很多人其实误解了
+现代世界的复杂性到底是什么。
+
 比如说造大飞机，
 大飞机好神奇，
 几百吨的东西居然让人给弄上天了，
@@ -38,8 +41,8 @@
 有的时候芯片坏了不能不修，
 直接换一新的，
 这才叫修飞机。
-所以这个世界你只有做最简单的事情，
 
+所以这个世界你只有做最简单的事情，
 才更容易把它做好。
 你才顺应了这个分工的趋势，
 更可能获得你想要的尊严和成功。
@@ -66,10 +69,12 @@
 所以我建议大家都去敦煌看一看，
 看完之后你马上脑子里就能蹦出这么一个公式，
 想做一件成功的事就去学敦煌的莫高窟，
+
 做一件简单且有价值的事，
 按照一个相对规定的格式去做，
 然后做很长时间的积累，
 就能成就一个伟大的东西。
+
 这样的例子在我们这个时代太多了，
 比如说纪录片《舌尖上的中国》，
 我们看到这些做食物的人好幸运，
@@ -87,6 +92,7 @@
 找不到好的素材得愁死了，
 这个时候谁能在某一项食品上做到公认的最好，
 导演组肯定就会去请人家让自己拍一下。
+
 这个世界的真相就是这样，
 当人和人联网，
 整个世界就变成了一个巨大的计算机，
@@ -96,6 +102,8 @@
 最后被发现那是一定的事情。
 第二个要点，就是要按照固定的节奏去做，
 就像我刚才讲的敦煌壁画，你别搞太多创新，
+
+#### 固定的节奏
 你都是在山崖上掏一个洞，
 洞可以有大有小，
 但是里面都是一个佛像，
@@ -103,6 +111,7 @@
 这个格式不变，
 这就叫按照一定的节奏去做，
 这个好处也是无穷的。
+
 举个例子，
 有一小伙子是一快消品公司的，
 他每天的工作就是到各个超市巡查，
@@ -110,48 +119,53 @@
 调查一下市场情况。
 他现在有两个方案，
 第一个方案是随时抽查每一家超市，
-还有一个方案就是每周每天一个固定的时间去哪家超市，
+还有一个方案就是
+每周每天一个固定的时间去哪家超市。
 你说哪个方案好？
-固定的好。
-道理很简单，你随时去，
-大家就觉得，你不就卖个东西，
+固定的好，道理很简单。
+你随时去，大家就觉得，你不就卖个东西，
 来了你看呗，给你销售数字。
 可是如果你固定时间去，
 比如这家超市你就在周二下午两点准时出现，
 时间一长会发生什么？
-这个超市上上下下都知道周二下午两点那小伙子就要来，
+这个超市上上下下都知道
+周二下午两点那小伙子就要来，
 这东西卖的怎么样，
 上上下下就会不自觉地去关注一下这个商品，
 这就有不得了的作用，
-每一个人会对你们公司生产的商品多留这么一点点关注，
+每一个人会对你们公司生产的商品
+多留这么一点点关注，
 你的业务就能做得更好，
 这就是按照固定的节奏去做事。
- 
+
 还有第三个要点，
 就是要长期积累，
 决定了就一直干下去。
-我自己是按照这个原则
-去做的，我每天早上在微信公众号发60秒语音，
+我自己是按照这个原则去做的，
+我每天早上在微信公众号发60秒语音，
 一秒不多，一秒不少。
 这件事我已经坚持五年多，
 我承诺我的用户要坚持十年。
-那到今天为止，我的微信公众号从一个用户都没有，
+那到今天为止，
+我的微信公众号从一个用户都没有，
 到1200万用户，
 就是这么积累出来的。
 还有我做的跨年演讲，
 从每年12月31日晚8点30分讲到第二年新年凌晨第一天的0点30分，
 我承诺讲20年，还有17年，
 估计那个时候我已经老得要坐轮椅上来了，
-但是我们已经做了承诺，而且票已经卖出去了，
-20年的票。
+但是我们已经做了承诺，
+而且票已经卖出去了，20年的票。
 承诺自己的用户然后一直去积累它，
 为什么？
 因为我知道自己能力不够。
+
 这个答案你可能听到觉得很神奇，
 我们这个时代绝大多数人都处于财富不够、能力不够的状态，
 至少比上不足，但是有一样东西绝对公平，
 就是时间，你有一秒我也有一秒，
 我用时间堆出来的东西，你拿钱你追不上，
+
 你现在可以学我每天早上发60秒语音，
 我比你先跑了5年半，
 这5年半的差距只要我不松劲你是永远追不上，对吧？
@@ -164,6 +178,7 @@
 但是只要我跟时间是最好的朋友，
 它的价值增长，我就能看得到。
 就像我们办公室墙上的一句话，
+
 曾国藩说的，叫“结硬寨，打呆仗”，
 做那些最硬的事，
 干那些在别人看起来很呆的事，
