--- a/知识就是力量/12/最重要的三点/1_回归不变.md
+++ b/知识就是力量/12/最重要的三点/1_回归不变.md
@@ -206,16 +206,19 @@
 去做那个几千年来所有时代都有人做的事
 那才是正道，
 你看今天的那些大公司跑出这个轨迹了吗？
-咱就说一细菌，
-世界上第一种生物。
+咱就说一细菌，世界上第一种生物。
 开始它有啥需求，就三个。
+
 第一，获取环境的养分，就是经济需求，
 就像今天的电商一样。
+
 第二，处理和其他细菌的关系，
 就像今天的社交软件一样。
+
 最后，细菌需要考虑那些细胞膜上布满的各种受体、
 感受环境的温度、压力等等，
 然后好决定自己下一步怎么办，
+
 这是什么创业项目？
 就是我们的得到App嘛，
 给大家要提供新的信息、新的知识。
