--- a/罗辑思维/1/向死而生/2_向死而生.md
+++ b/罗辑思维/1/向死而生/2_向死而生.md
@@ -1,11 +1,18 @@
 ### 向死而生
 刚才我们不是说，相信末日说，这叫猜笨迷。
-可是相信末日说也有好处。其实我们每一个人的生活，
+可是相信末日说也有好处。
+
+其实我们每一个人的生活，
 都是带着末日去生活的。
-这就是像德国哲学家海德格尔讲的，叫向死而生，亡是一种状态，而我们活着就是死，就是去死，
-不断的逼近那个亡的状态。 所以其实每一个人，我们假设，
-你的生命是无远弗界的，你可以永远活下去，那你想你这辈子一定会极其糟糕。
+这就是像德国哲学家海德格尔讲的，
+叫向死而生，亡是一种状态，
+而我们活着就是死，就是去死，
+不断的逼近那个亡的状态。
+所以其实每一个人，我们假设，
+你的生命是无远弗界的，你可以永远活下去，
+那你想你这辈子一定会极其糟糕。
 因为你什么时候努力都可以。对吧？
+
 而我们现代人最大的问题是，
 我们有的时候忘了人是要死的。
 比如说我们为什么要撒谎？
@@ -16,6 +23,7 @@
 因为我们觉得，我现在赚钱，我忙啊，
 等我赚完钱之后，
 我有机会我再来孝敬父母，对吧？ 
+
 但是你有没有想到，生命是何等脆弱，
 人如蝼蚁，天地以万物为刍狗，天地不仁的啊。
 也就是说，你头天晚上脱下鞋上炕，
@@ -24,11 +32,14 @@
 所以，其实心中永远保有这样一个死字，
 对人来说最大的好处，就是你绝对不会作恶。
 你绝对会把当下要干的事情立即都要干掉。
-每天晚上上床之前你想想看，如果今天夜里我要醒不过来，
-我有没有对这个社会，对这个世界，还有惭愧之处。
+每天晚上上床之前你想想看，
+如果今天夜里我要醒不过来，
+我有没有对这个社会，
+对这个世界，还有惭愧之处。
 这就是向死而生的境界。
 其实人都是这样。
 人之将死，其言也善。
+
 你看慈禧，据说最后一道遗诏，她说的是什么？
 她说，以后大清国，女主不许干政。
 你看她知道的啊。
