--- a/罗辑思维/156/这个世界会好吗-上/6_递弱.md
+++ b/罗辑思维/156/这个世界会好吗-上/6_递弱.md
@@ -107,12 +107,14 @@
 
 这些元素在自然界中是不存在的  它是方生方死
 
-它的存在度是只能在实验室把它做出来  而且一次性的只能得到几个原子
+它的存在度是只能在实验室把它做出来  
+
+而且一次性的只能得到几个原子
 
 而这些原子一旦出现之后几个毫秒就马上衰变掉了
 
-所以它的稳定度是越来越差  比如说物理学有个概念叫高能物理
-
+所以它的稳定度是越来越差  
+比如说物理学有个概念叫高能物理
 高能物理研究的对象就是观察微观粒子结构  
 为什么叫高能物理
 是因为你要把这个粒子打开的话
