--- a/罗辑思维/69/活在当下/69迷茫时代的明白人.md
+++ b/罗辑思维/69/活在当下/69迷茫时代的明白人.md
@@ -1,10 +1,10 @@
-###
+### 迷茫时代的明白人
+李鸿章活着的时候，脑袋上有两顶大帽子：
+汉奸、误国权臣。
+当时有人专门写了两副对联描写他，对此说得很明白。
 
-李鸿章活着的时候，脑袋上有两顶大帽子：汉奸、误国权臣。当时有人专门写了两副对联描写他，对此说得很明白。
-
-
-
-第一副：“杨三已死无苏丑，李二先生是汉奸。”杨三是当年北京城一个著名的丑角演员，大名杨鸣玉，因在家中排行老三，故称杨三，是徽班进京后由演唱徽调、昆腔衍变为京剧的十三位奠基人之一。杨三正好在《马关条约》签订（1895年4月17日）之前死了，所以老百姓就编了这么一副对联。这副对联对得特别工整——“杨三”对“李二”（李鸿章在家行二）；“已死”对“先生”；“无苏丑”对“是汉奸”。这就是一顶汉奸帽子。
+第一副：“杨三已死无苏丑，李二先生是汉奸。”
+杨三是当年北京城一个著名的丑角演员，大名杨鸣玉，因在家中排行老三，故称杨三，是徽班进京后由演唱徽调、昆腔衍变为京剧的十三位奠基人之一。杨三正好在《马关条约》签订（1895年4月17日）之前死了，所以老百姓就编了这么一副对联。这副对联对得特别工整——“杨三”对“李二”（李鸿章在家行二）；“已死”对“先生”；“无苏丑”对“是汉奸”。这就是一顶汉奸帽子。
 
 
 
@@ -372,169 +372,175 @@
 
 
 
-于是75岁的老人家秋末就从北京出发，一直到次年三月才回到北京，整整一个冬天行走了两千多里地，而且带着一帮外国顾问按照现代科学方法去勘探黄河，提出了一整套治理黄河的科学方法。
+于是75岁的老人家秋末就从北京出发，一直到次年三月才回到北京，
+整整一个冬天行走了两千多里地，而且带着一帮外国顾问按照现代科学方法去勘探黄河，
+提出了一整套治理黄河的科学方法。
 
 
 
 李鸿章这个人就是这样。我不跟你意气用事，不跟你生气，
-
-你让我去，我就说最好别让我去；你非得让我去，那我就去。
-
-而且一旦我去了，不管我多大岁数，我都会踏踏实实地把这件事干成。
+你让我去，我就说最好别让我去；
+你非得让我去，那我就去。
+而且一旦我去了，不管我多大岁数，
+我都会踏踏实实地把这件事干成。
 
 这就是李鸿章这一生最狠的地方。
-
 他不被任何所谓的周边关系所绑定，
-
 所有的注意力都在事上。
-
 看住当下，做现在该做的事情
 
-一个人之所以会生出各种各样的妄念，通常都出自一个原因：
-
+一个人之所以会生出各种各样的妄念，
+通常都出自一个原因：
 纠缠于过去、未来、同时间的人际关系中。
-
 现在有很多在公司里打工的人觉得心里不爽，工资少，
-
-也没有前途。他们的很多想法其实都是妄念。
-
+也没有前途。
+他们的很多想法其实都是妄念。
 如果说你非要进大组织、考公务员、跟过去的组织较劲，
 
-就要吸取左宗棠的教训——因为你活在过去。
-
-如果你天天想着我要创业，我有一个什么想法要去拿风险投资，
-
+就要吸取左宗棠的教训，
+因为你活在过去。
+如果你天天想着我要创业，
+我有一个什么想法要去拿风险投资，
 那你也许就是犯了张之洞的毛病。
-
-晚清还有一副对联：“李鸿章张目而卧，张之洞闭目而奔。”什么意思？
-
+晚清还有一副对联：
+“李鸿章张目而卧，张之洞闭目而奔。”
+什么意思？
 就是李鸿章躺在那儿眼睛都是睁着的，是个明白人；
-
 张之洞跑的时候都是闭着眼睛的，完全没有目标。
 
 所以，咱也不能贸然创业。
-
-但有的人会说，那我就地搞搞办公室政治，靠巧妙往上奔行不行？
-
-李鸿章的故事会告诉你，也许这三条路都错了。
+但有的人会说，那我就地搞搞办公室政治，
+靠巧妙往上奔行不行？
+李鸿章的故事会告诉你，
+也许这三条路都错了。
 
 那不就没有路了吗？不就是绝路吗？
-错。前不久，我参加了一个会议，参会者全部是传统媒体转做新媒体的一些人，
+错。前不久，我参加了一个会议，
+参会者全部是传统媒体转做新媒体的一些人，
 就是新建的那些部门的小编们、新总编们的一个会议。
 大家就跟我聊，说传统媒体转新媒体不怎么好弄啊，
 想跟《罗辑思维》学习吧，
 又觉得你们也没有什么可复制性。
 我说对呀，他们就问：“那我们怎么办呢？”
 
-我说很简单，给大家讲一个心法，叫临行喝妈一口奶。
-
-什么意思？就是你们不要去想未来会怎么样，
-
-就利用好你们现在的资源，做一件在现在这个岗位上最漂亮的事。
-
-你的所有注意力不能是张主任满意不满意，王总高兴不高兴，
-
-今天的KPI考核怎么样，这都是组织内的人际关系指标，
-
-不要去想这些。也不要去想自己原来的本事在未来能不能用，
-
-因为情况变了，新媒体、旧媒体时代完全不一样了。
-
-更不要去想，是不是不要在这儿干了，搞个什么项目创业去。
-
+我说很简单，给大家讲一个心法，
+叫临行喝妈一口奶，什么意思？
+就是你们不要去想未来会怎么样，
+就利用好你们现在的资源，
+做一件在现在这个岗位上最漂亮的事。
+你的所有注意力不能是张主任满意不满意，
+王总高兴不高兴，
+今天的KPI考核怎么样，
+这都是组织内的人际关系指标，
+不要去想这些。
+也不要去想自己原来的本事在未来能不能用，
+因为情况变了，
+新媒体、旧媒体时代完全不一样了。
+更不要去想，
+是不是不要在这儿干了，搞个什么项目创业去。
 最好的方案就是学习李鸿章，看住当下，
-
 就从这一点出发，做现在该做的事情。
-
 原来给人打工的时候，我就老跟别人讲，
-
 我自己做事有一个心法：
+所有的事都是做给现在老板用的，
+但同时也是做给下一个老板看的。
+就是说，我们现在做任何事，
+既是为现在的公司、单位作贡献，
+与此同时也是在打造我们的个人品牌，
+让下一个老板自然看到。
+这样也许是老板，也许是风险投资人，
+他们会找上门来，来利用我们这个本事。
+把心放在现在、今天、此刻。
 
-所有的事都是做给现在老板用的，但同时也是做给下一个老板看的。
-
-就是说，我们现在做任何事，既是为现在的公司、单位作贡献，
-
-与此同时也是在打造我们的个人品牌，让下一个老板自然看到。
-
-这样也许是老板，也许是风险投资人，他们会找上门来，来利用我们这个本事。
-
-把心放在现在、今天、此刻
-
-其实李鸿章就是这么办的，而且李鸿章后来之所以在国际上声名浩荡，
-
-正是因为他的这种行事作风。1896年李鸿章访问俄、德、荷、比、法、英、美诸国，
-
-他在全球受到的那种礼遇和高规格的接待，基本上就是国王的标准，尤其是在德国。
-
-李鸿章最潇洒的是在美国。因为李鸿章长得也帅，
-
+其实李鸿章就是这么办的，
+而且李鸿章后来之所以在国际上声名浩荡，
+正是因为他的这种行事作风。
+1896年李鸿章访问俄、德、荷、比、法、英、美诸国，
+他在全球受到的那种礼遇和高规格的接待，
+基本上就是国王的标准，尤其是在德国。
+李鸿章最潇洒的是在美国。
+因为李鸿章长得也帅，
 一米八的大个子，仙风道骨，留着山羊胡，
-
 特别有东方老者的派头。
-
 美国人把战败国的李鸿章都快捧到天上去了。
 
-当时很多广告都是用李鸿章做招牌，有一个麦乳精的广告，
+当时很多广告都是用李鸿章做招牌，
+有一个麦乳精的广告，
+说李鸿章特爱吃我们的麦乳精，
+吃了之后牙口倍儿好，
+身体倍儿棒，吃嘛嘛香。
 
-说李鸿章特爱吃我们的麦乳精，吃了之后牙口倍儿好，身体倍儿棒，吃嘛嘛香。
+当时纽约的新闻报还专门登了李鸿章的照片，
+说李鸿章从来不会错过我们周日的新闻报，这也是广告。
+甚至还有一些卖东方瓷器的人也公开打广告，
+说我是李鸿章的副官，等等，
+都是拿老头儿说事。
+你说这是为什么？
+当然是为了他们自己的经济利益。
+但是你想，他们为什么这么做呢？
+因为李鸿章办一件事办出了名
+——他的注意力在事上，所以西方人都知道，
+李鸿章是中国办洋务最棒的一个人，
+是中国“睁眼看世界”，
+看得最远、站得最高的一个人。
+品牌树起来了，整个市场都会认你。
 
+所以在一个市场极其动荡的时代，
+我们是在一个组织内为现在的老板打工，
+还是利用现在老板的资源为整个市场制造一个高地，
+让所有的人都看见我们呢？
+这其实比贸然用一个妄想的计划出去创业更高明，
+也是比枯守在原组织内、希望得到现有组织认可更高明的做法。
 
+《时代周刊》有一期封面文章叫《正念革命》（TheMindfulRevolution）。
+Mindful这个单词是全神贯注的意思。
+这是西方企业家群体里面正在兴起
+甚至已达到狂热的一种减压心法。
+当然在心理学系统里，它是一种减压、禅修、玄想的方法。
+但实际上它就是告诉你，在这么混乱的情况下，
+你不要想前面，也不要想后头，你就把注意力放在当下。
+他们的很多修习方法都非常简单，比如我们都吃过葡萄干，
+但葡萄干是什么味道我们绝大部分人是不知道的，
+因为我们都没有认认真真吃过一颗葡萄干。
+你先坐在那儿打坐，静默，
+然后闭上眼睛，拿一颗葡萄干放在嘴里，
+用牙齿轻轻地挑破它的表皮，一点一点感受它的滋味。
+如果你这么吃葡萄干，或者吃任何东西，
+你就会发现你其实从来没有吃过葡萄干。
+这就是Mindful，即正念的力量。
 
-当时纽约的新闻报还专门登了李鸿章的照片，说李鸿章从来不会错过我们周日的新闻报，这也是广告。甚至还有一些卖东方瓷器的人也公开打广告，说我是李鸿章的副官，等等，都是拿老头儿说事。
-
-你说这是为什么？当然是为了他们自己的经济利益。但是你想，他们为什么这么做呢？因为李鸿章办一件事办出了名——他的注意力在事上，所以西方人都知道，李鸿章是中国办洋务最棒的一个人，是中国“睁眼看世界”看得最远、站得最高的一个人。品牌树起来了，整个市场都会认你。
-
-所以在一个市场极其动荡的时代，我们是在一个组织内为现在的老板打工，还是利用现在老板的资源为整个市场制造一个高地，让所有的人都看见我们呢？这其实比贸然用一个妄想的计划出去创业更高明，也是比枯守在原组织内、希望得到现有组织认可更高明的做法。
-
-《时代周刊》有一期封面文章叫《正念革命》（TheMindfulRevolution）。Mindful这个单词是全神贯注的意思。这是西方企业家群体里面正在兴起甚至已达到狂热的一种减压心法。
-
-当然在心理学系统里，它是一种减压、禅修、玄想的方法。但实际上它就是告诉你，在这么混乱的情况下，你不要想前面，也不要想后头，你就把注意力放在当下。他们的很多修习方法都非常简单，比如我们都吃过葡萄干，但葡萄干是什么味道我们绝大部分人是不知道的，因为我们都没有认认真真吃过一颗葡萄干。
-
-你先坐在那儿打坐，静默，然后闭上眼睛，拿一颗葡萄干放在嘴里，用牙齿轻轻地挑破它的表皮，一点一点感受它的滋味。如果你这么吃葡萄干，或者吃任何东西，你就会发现你其实从来没有吃过葡萄干。这就是Mindful，即正念的力量。
-
-其实关于正念我们也不用讲更多，就是一个“念”字。汉语里念字怎么写？上面一个今，下面一个心，什么叫正念？就是把心放在现在、今天、此刻。
-
+其实关于正念我们也不用讲更多，
+就是一个“念”字。
+汉语里念字怎么写？
+上面一个今，下面一个心，什么叫正念？
+就是把心放在现在、今天、此刻。
 为什么这套心法在这个时代愈加重要？
-
 因为我们正处在一个时代变化的惊涛骇浪之中，
-
-我们今天所处的时代和100多年前李鸿章所处的时代其实差不多，
-
-都是“愚人船”，我们在船舱里都不知道未来会怎么样，
-
+我们今天所处的时代
+和100多年前李鸿章所处的时代
+其实差不多，
+都是“愚人船”，
+我们在船舱里都不知道未来会怎么样，
 也没有人隔着船舱告诉我们应该往哪里走，
-
 我们这一代人都是蹚着往前试，往前走。
 
 就像2013年9月诺基亚卖给微软的最后一次新闻发布会上，
-
 他们的老总就讲了一句很让人心疼的话。
-
 他说我们其实也没犯什么错，
-
 但是不知道怎么就输了。
 
 #### 怎么办
-没错，
-
-在这个时代你会发现，
-
-过去的经验没用了，
-
-对未来的预测基本都是瞎扯，
-
-基于原来人际关系获得的所有巧妙几乎也都失效了。
-
-那怎么办？在这里我们其实就提供了一个方案：
-
-学习李鸿章，把所有的注意力放在当下，
-
-不管过去，不管未来，不管周边，
-
-做当下最该做的事。
-
-最后引用胡适先生写的一句诗：“做了过河卒子，只能拼命向前。”
-
-在这个变幻莫测的大时代，
-
-我们每个人都是一颗过河的卒子。
+没错，  
+在这个时代你会发现，  
+过去的经验没用了，  
+对未来的预测基本都是瞎扯，  
+基于原来人际关系获得的所有巧妙几乎也都失效了。  
+那怎么办？  
+在这里我们其实就提供了一个方案：  
+学习李鸿章，把所有的注意力放在当下，  
+不管过去，不管未来，不管周边，  
+做当下最该做的事。  
+最后引用胡适先生写的一句诗：  
+“做了过河卒子，只能拼命向前。”  
+在这个变幻莫测的大时代，  
+我们每个人都是一颗过河的卒子。  
