--- a/罗辑思维/156/这个世界会好吗-上/8_结论1-依赖性上升.md
+++ b/罗辑思维/156/这个世界会好吗-上/8_结论1-依赖性上升.md
@@ -1,13 +1,13 @@
-### 结论1-依存度上升
+### 结论1-依赖性上升
 那万物的递弱代偿
 大概我们从四个角度可以观察它。  
 第一个角度
 就是万物的存在度越来越递减  
 于是对外界条件的依存度就越来越高
 
-这话说得还是很抽象  我们来举一个例子  
+这话说得还是很抽象，我们来举一个例子  
 万物演化的奇点是什么
-根据宇宙大爆炸的学说  就是奇点  
+根据宇宙大爆炸的学说，就是奇点  
 这两个发音其实现在也在打官司
 你就说它是奇点吧  
 那奇点是什么状态  
