--- a/罗辑思维/156/这个世界会好吗-上/0_王东岳.md
+++ b/罗辑思维/156/这个世界会好吗-上/0_王东岳.md
@@ -93,22 +93,23 @@
 
 也仅仅是在一个非常小的圈层当中流传  也没有经过时间漫长的检验
 
-我今天把它贸然说出来  如果引发铺天盖地的谩骂  觉得匪夷所思
-
-胡说八道  我个人的是非荣辱倒是无所谓了
-
-但是如果耽误大家和如此精彩的思想体系相接触  和它擦肩而过
-
-那我的罪过也是很大的  当然说道这儿你可能会反问  罗胖  什么破结论
-
+我今天把它贸然说出来，   
+如果引发铺天盖地的谩骂，  
+觉得匪夷所思，胡说八道，  
+我个人的是非荣辱倒是无所谓了，  
+但是如果耽误大家和如此精彩的思想体系相接触，  
+和它擦肩而过  
+那我的罪过也是很大的  
+当然说道这儿你可能会反问  
+罗胖，什么破结论
 这么谨小慎微，我们今天很宽容的。  
-什么外星人，什么宗教，什么同性恋。
-我们都能接受，先说结论。
+什么外星人，什么宗教，什么同性恋。  
+我们都能接受，先说结论。  
 
-慢着，结论我们一会儿来推导，
-我们先干一件事，
+慢着，结论我们一会儿来推导，  
+我们先干一件事，  
 就是建立知识共识，  
-因为任何严肃的思想，
+因为任何严肃的思想，  
 它必须建立在一些知识的共识上。  
-否则思想都是抬杠，
+否则思想都是抬杠，  
 必须有这样的一些共识。  
