--- a/时间的朋友/2016/1_我们的2016.md
+++ b/时间的朋友/2016/1_我们的2016.md
@@ -43,6 +43,17 @@
 
 今年马云讲了一句话，我觉得特别有意思。有人说实体经济不行了，那是你们家的实体经济不行了，跟实体经济有毛关系？实体经济好的企业多得是。
 
-2016年就要过去了，我和各位一样，非常的怀念它，那么多吃瓜群众在想着宏观经济会不会好啊？远期来看，人民币汇率是涨是跌啊？王宝强家会不会真的受到损失啊？谢杏芳到底有没有真诚地原谅林丹啊？资本有没有寒冬啊？乐视会不会倒啊？我们用一颗吃瓜群众的心，其实我们也都难免，在关心着一切消息。但是我们身为一个创业者，我们心里知道，好也罢、坏也罢，它只是我的环境，我的任务很简单，适应环境，找到机会，然后活下来。
+2016年就要过去了，我和各位一样，非常的怀念它，
+那么多吃瓜群众在想着宏观经济会不会好啊？
+远期来看，人民币汇率是涨是跌啊？
+王宝强家会不会真的受到损失啊？谢杏芳到底有没有真诚地原谅林丹啊？
+资本有没有寒冬啊？乐视会不会倒啊？
+我们用一颗吃瓜群众的心，其实我们也都难免，在关心着一切消息。
+但是我们身为一个创业者，我们心里知道，好也罢、坏也罢，
+它只是我的环境，我的任务很简单，
+适应环境，找到机会，然后活下来。
 
-正如张瑞敏先生打的那个比方，什么是创业者？创业者就是和一架飞机同时从悬崖上掉下去，然后你有本事一边掉一边修，修好这架飞机，然后向新的方向飞去。
+正如张瑞敏先生打的那个比方，什么是创业者？
+创业者就是和一架飞机同时从悬崖上掉下去，
+然后你有本事一边掉一边修，修好这架飞机，
+然后向新的方向飞去。
