--- a/时间的朋友/2016/2_时间战场.md
+++ b/时间的朋友/2016/2_时间战场.md
@@ -1,4 +1,5 @@
 二、时间战场
+
 华为总部有一个湖，名为天鹅湖。
 华为花了很大的价钱，从国外引进了八只黑天鹅。
 什么是黑天鹅？
@@ -294,13 +295,14 @@ BAT是人类商业文明的一层，这一层会固化，
 这要成为我们观察下一个阶段商业的一个全新的角度，
 首先时间会变成终极战场。什么意思？
 
+#### 终极战场
 就是所有的行业，
 不管是电影、游戏、休闲、度假，还是什么直播，
 还是什么新近兴起的短视频，
 不要以为还有什么行业的壁垒，
 每一个行业都是在这个时间战场当中要自己的一杯羹。
-现在所有的新兴产业本质上就是既要你的钱，
-还要你的命。
+现在所有的新兴产业本质上就是
+既要你的钱，还要你的命。
 什么意思？
 就是还要获取你生命当中的一段时间。
 一个咖啡馆和一个出版社，
