--- a/时间的朋友/2016/2_时间战场.md
+++ b/时间的朋友/2016/2_时间战场.md
@@ -355,7 +355,8 @@ Netflix的CEO讲了这么一段话，
 还有一个悲摧的产品，美图秀秀，
 它就是典型的张小龙说的那种，
 用完就走，我用完美图秀秀不走，
-难道要在里面不断提醒自己我其实没那么好看吗？
+难道要在里面不断提醒自己
+我其实没那么好看吗？
 结果呢？
 结果这样一个理论上用户也达到十个亿，
 据说月活也有四个亿的产品，
