--- a/时间的朋友/2017/8_人生算法.md
+++ b/时间的朋友/2017/8_人生算法.md
@@ -167,14 +167,18 @@
 没有什么确定的一百万，两百万。  
 我们面对的其实都是第二种选择，  
 任何好事，都只是个可能性，  
+
 请用你的努力，你的实践，  
-更重要的你的算法来逐渐逼近它。  
+更重要的你的算法  
+来逐渐逼近它。  
 所以有一本书，中信出版社委托我推荐，  
 今年在美国大火，《原则》。  
-电子版刚刚上线，我的人生，就是算法的人生，  
-什么叫做用算法来控制自己，  
-来迭代自己，来接近成功。  
-人生一切的结果，是最好的算法。  
+电子版刚刚上线，  
+我的人生，就是算法的人生，  
+什么叫做用算法  
+来控制自己，来迭代自己，来接近成功。  
+人生一切的结果，  
+是最好的算法。  
 瑞·达利欧前一段时间来中国，  
 只接受了一个记者的采访，就是得到，  
 得到总编辑李翔，对他进行了采访。  
@@ -189,7 +193,7 @@
 我们还是回到人生算法，其实这也不是什么新发现，  
 除了瑞·达利欧，很多成功人物都过这样的话。  
 查理·芒格说过，当成功成功概率很高的时刻，  
-最大的赌注，而其他时间按兵不动。  
+下最大的赌注，而其他时间按兵不动。  
 
 那就OK，这一句话你要听不懂，  
 就看巴菲特的原话，  
@@ -198,7 +202,8 @@
 
 如果你还没听懂什么是算法，  
 我的朋友喻颖正，还给了一个公式，叫  
-人生成就等于核心算法×大量重复动作的平方。  
+人生成就等于  
+核心算法×大量重复动作的平方。  
 
 如果你还没懂人生算法，  
 我就说一句大白话，所谓人生算法，  
