--- a/时间的朋友/2017/8_人生算法.md
+++ b/时间的朋友/2017/8_人生算法.md
@@ -172,8 +172,7 @@
 更重要的你的算法  
 来逐渐逼近它。  
 所以有一本书，中信出版社委托我推荐，  
-今年在美国大火，《原则》。  
-电子版刚刚上线，  
+今年在美国大火，《原则》。电子版刚刚上线，  
 我的人生，就是算法的人生，  
 什么叫做用算法  
 来控制自己，来迭代自己，来接近成功。  
